--- a/src/assets/partials/app.scss
+++ b/src/assets/partials/app.scss
@@ -1,4 +1,9 @@
 @import "./blog.scss";
+@import "./about-me.scss";
+
+body {
+  @apply bg-gray-100;
+}
 
 .form-control {
   @apply flex flex-col my-4;
