--- a/src/assets/index.css
+++ b/src/assets/index.css
@@ -14461,6 +14461,12 @@ body {
   box-shadow: 0 0 0 3px rgba(66, 153, 225, 0.5);
 }
 
+.form-label {
+  --text-opacity: 1;
+  color: #4a5568;
+  color: rgba(74, 85, 104, var(--text-opacity));
+}
+
 @media (min-width: 640px) {
   .sm\:container {
     width: 100%;
